jS-Strict-Mode/Examples/example15.js
// The with statement is not allowed
"use strict";
// with (Math){x = cos(2)}; // Removing comment from this statement will result in below mentioned Error.
// SyntaxError: Strict mode code may not include a with statement
